[gd_scene load_steps=4 format=3 uid="uid://b56jpy4hsyhcs"]

[ext_resource type="Script" uid="uid://bbl3d6rsb1dfh" path="res://scripts/crowd.gd" id="1_h08my"]
[ext_resource type="PackedScene" uid="uid://bf2t3dxmljieh" path="res://scenes/health_pickup.tscn" id="2_d24v3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h08my"]
size = Vector2(79.903076, 26.577164)

[node name="Crowd" type="Node2D"]
script = ExtResource("1_h08my")

[node name="PatronContainer" type="Node2D" parent="."]

[node name="RoseContainer" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(128, 128)
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-90, -90)
rotation = -2.3561945
scale = Vector2(0.9999999, 0.9999999)
shape = SubResource("RectangleShape2D_h08my")

[node name="HealthPickup" parent="." instance=ExtResource("2_d24v3")]

[connection signal="picked_up" from="HealthPickup" to="." method="_on_health_pickup_picked_up"]
[connection signal="start_spawn" from="HealthPickup" to="." method="_on_health_pickup_start_spawn"]
